5 minute button counts down from 5 instead of 1 & added link to href for readme

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	</div>
 	<div class="about-txt">
 	    <h2>Handy Dandy Countdown Timer.</h2>
-		<p>This program was created using HTML, CSS, & JavaScript. Select a sound to play when the timer ends, or uncheck the box for no sound. Once you have selected a sound, click a time to start the countdown. The outdated appearance is intentional - I found this program (from 2003) burried in a shared drive and decided it would be a good way to test my  abilities on recreating something from visuals and interaction only. Check out the <a href="" class="readme">README on github</a> for images of the original project.</p>
+		<p>This program was created using HTML, CSS, & JavaScript. Select a sound to play when the timer ends, or uncheck the box for no sound. Once you have selected a sound, click a time to start the countdown. The outdated appearance is intentional - I found this program (from 2003) burried in a shared drive and decided it would be a good way to test my  abilities on recreating something from visuals and interaction only. Check out the <a href="https://github.com/KimM-09/timer" class="readme">README on github</a> for images of the original project.</p>
 		<button id="close-btn" class="btn-animations btn-font">Close</button>
 	</div>
     <div class="container">
 	  <div class="timer-btns">
-	    <button class="btn-animations btn-font timer-btn" id="five" data-minutes="1"><span class="underline">5</span> Minutes</button>
+	    <button class="btn-animations btn-font timer-btn" id="five" data-minutes="5"><span class="underline">5</span> Minutes</button>
 		<button class="btn-animations btn-font timer-btn" id="ten" data-minutes="10"><span class="underline">1</span>0 Minutes</button>
 		<button class="btn-animations btn-font timer-btn" id="fifteen" data-minutes="15">15 <span class="underline">M</span>inutes</button>
 		<button class="btn-animations btn-font timer-btn" id="thirty" data-minutes="30"><span class="underline">3</span>0 Minutes</button>
